--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 text-decoration: none;
                 color: var(--main-white);
             }
-            /* Welcome header */
+            /* header */
             .background{
                 display: flex;
                 justify-content: center;
@@ -69,6 +69,10 @@
                     position:absolute; 
                     top:20%; 
                     left:12%;
+                }
+                .carru{
+                    position: relative;
+                    left: 40%;
                 }
             }
             .bshadow{
@@ -406,8 +410,32 @@
                         <a  href="#"><img src="assets/img/windows_store.png" style="height: 50px; width: 150px;"></a>
                     </div>
                 </div>
-                <div class="col-sm">
-                    
+                <div class="col-sm text-center">
+                    <h1 class="display-6">Socios Estrategicos</h1>
+                    <hr class="style14">
+                    <div class="row justify-content-md-center carru">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-40" src="assets/img/121.png" alt="First slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-40" src="assets/img/122.png" alt="Second slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-40" src="assets/img/123.png" alt="Third slide">
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
+                    </div>
                 </div>
             </div>
         </div>
